--- a/css/style_padrao.css
+++ b/css/style_padrao.css
@@ -24,7 +24,7 @@
 
     .cabecalho{
         width: 100%;
-        background-image: url("/imagens/ultimo.png");
+        background-color: orange;
     }
 .menu .ul-menu{
  display: flex;   
@@ -46,6 +46,15 @@ color: white;
     color: var(--background-clean);
 }
 
+ul li#imagem-localizacao{
+    display: flex;
+   padding-right: 0;
+   padding-left: 5rem;
+   margin-right: .8rem;
+   align-items: center;
+    
+}
+
 .bi-geo-alt{
     font-size: 60px;
     color: var(--background-clean);
@@ -57,7 +66,7 @@ color: white;
   font-size: 40px;
   padding-left: 0%;
   padding-right: 5rem;
-}
+  }
 
 .bi-award{
     font-size: 60px;
